# Conveyor-Waste-Classification

./: README.md
ai/notebooks/: Classification.ipynb  Data_Preprocessing.ipynb  Detection.ipynb  YOLO_DETECT2_0.ipynb
ai/weights/: Classi_YOLOv8.pt
ros/wc_ws/src/arm/conveyor_controller/: glass.txt  metal.txt  organic.txt  package.xml  paper.txt  plastic.txt  setup.py  spawn_list.txt
ros/wc_ws/src/arm/conveyor_controller/conveyor_controller/: controller.py
ros/wc_ws/src/arm/conveyor_controller/conveyor_controller/scripts/: file_spawner.py
ros/wc_ws/src/arm/my_conveyor_gazebo/: CMakeLists.txt  package.xml
ros/wc_ws/src/arm/my_conveyor_gazebo/config/: controllers.yaml
ros/wc_ws/src/arm/my_conveyor_gazebo/launch/: simulate.launch.py
ros/wc_ws/src/arm/my_conveyor_gazebo/worlds/: empty.world
ros/wc_ws/src/arm/my_robot/: CMakeLists.txt  package.xml
ros/wc_ws/src/arm/my_robot/launch/: display.launch.py
ros/wc_ws/src/arm/my_robot/rviz/: robot_display.rviz
ros/wc_ws/src/arm/my_robot/urdf/: my_conveyor_belt.urdf  my_conveyor_belt.xacro  my_robot.urdf  trash_bin.xacro
ros/wc_ws/src/camera/yolobot_control/launch/: yolobot_control.launch.py
ros/wc_ws/src/camera/yolobot_description/robot/: yolobot.urdf
ros/wc_ws/src/camera/yolobot_gazebo/launch/: yolobot_launch.py
ros/wc_ws/src/camera/yolobot_recognition/launch/: launch_yolov8.launch.py
ros/wc_ws/src/camera/yolobot_recognition/scripts/: verify_labels.py  yolov8_ros2_pt.py
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/models/conveyor_belt/: model.sdf
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/: coca.sdf  glass.sdf  glass1.sdf  glass2.sdf  glass3.sdf  glass4.sdf  metal.sdf  metal1.sdf  metal2.sdf  metal3.sdf  metal4.sdf  organic.sdf  organic1.sdf  organic2.sdf  organic3.sdf  organic4.sdf  paper.sdf  paper1.sdf  paper2.sdf  paper3.sdf  paper4.sdf  plastic.sdf  plastic1.sdf  plastic2.sdf  plastic3.sdf  plastic4.sdf
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/coca_block/: model.config  model.sdf
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/coca_block/meshes/: coca_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/glass_block/: model.config  model.sdf
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/glass_block/meshes/: glass_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/glass_block1/: model.config  model.sdf
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/glass_block1/meshes/: glass_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/glass_block2/meshes/: glass_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/glass_block3/meshes/: glass_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/glass_block4/meshes/: glass_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/metal_block/: model.config  model.sdf
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/metal_block/meshes/: metal_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/metal_block1/meshes/: metal_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/metal_block2/meshes/: metal_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/metal_block3/meshes/: metal_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/metal_block4/meshes/: metal_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/organic_block/: model.config  model.sdf
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/organic_block/meshes/: organic_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/organic_block1/meshes/: organic_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/organic_block2/meshes/: organic_block.dae  organic_block.stl
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/organic_block3/meshes/: organic_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/organic_block4/meshes/: organic_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/paper_block/: model.config  model.sdf
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/paper_block/meshes/: paper_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/paper_block1/meshes/: paper_block.dae
ros/wc_ws/src/conveyor/conveyorbelt_gazebo/urdf/plastic_block/: model.config  model.sdf
ros/wc_ws/src/conveyor/conveyorbelt_msgs/: CMakeLists.txt
ros/wc_ws/src/system_launch/: CMakeLists.txt  package.xml
ros/wc_ws/src/system_launch/launch/: system.launch.py
ros/wc_ws/src/trash_bin/: CMakeLists.txt  package.xml
ros/wc_ws/src/trash_bin/launch/: spawn_trash_bins.launch.py
ros/wc_ws/src/trash_bin/urdf/: trash_bin.xacro
(+9 files in other folders)
