<?xml version="1.0"?>
<package format="3">
  <name>system_launch</name>
  <version>0.1.0</version>
  <description>Top-level launch for conveyor, camera/AI, and arm</description>
  <maintainer email="you@your.email">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- you can add exec_depend on any packages whose launch files you include,
       but it isn’t strictly required for pure launch-only packages -->
  <exec_depend>conveyorbelt_gazebo</exec_depend>
  <exec_depend>yolobot_gazebo</exec_depend>
  <exec_depend>yolobot_control</exec_depend>
  <exec_depend>yolobot_recognition</exec_depend>
  <exec_depend>conveyor_controller</exec_depend>
</package>

