<?xml version="1.0"?>
<package format="3">
  <name>trash_bin</name>
  <version>0.0.1</version>
  <description>A simple package to spawn multiple trash-bin URDFs into Gazebo.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
